Javadoc updates